--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -1,11 +1,25 @@
 {% extends 'base/base.html' %}
+{% load staticfiles %}
+<link rel="stylesheet" href="{% static '../base/style.css' %}">
 {% block body %}
-<form action="" method="post">
-    {%csrf_token%}
-    <label for="username">username:</label>
-    <input type="text" name="username" id="username">
-    <label for="password">password</label>
-    <input type="password" name="password" id="password">
-    <button>login</button>
-</form>
+<div class="container">
+    <div class="main-form">
+        <div class="grid-container">
+            <div class="grid-items login-form">
+                <div style="width: 100%; text-align: center;">
+                    <img src="https://img.icons8.com/ios-filled/100/000000/user-male-circle.png" class="user-img">
+                    <h3 style="font-size: min(1.5rem,4vw); width: 100%;">Account Login</h3>
+                </div>
+                <form action="" method="POST">
+                    {%csrf_token%}
+                    <input type="text" required placeholder="Email" class="field" id="search"><br>
+                   <input type="password" required placeholder="Password" class="field"><br><a href="#" style="text-decoration: none; color: #666; font-size: min(0.7em,2vw); float: right; position: relative;top: -1.5em;">Forget Password?</a>
+                    <button class="login-btn">Login</button>
+                    <p style="font-size: min(1em,2.5vw);color: #999;">New User? <span><a href="#" style="color: #004C80;font-weight: 600;">SignUp</a></span> here!!</p>
+                </form>
+            </div>
+            <div class="grid-items grid-img"><img src="side.jpg" style="width: 100%; height: 100%; border-bottom-right-radius: 2rem;"></div>
+        </div>
+    </div>
+</div>
 {% endblock %}
