--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -16,7 +16,7 @@
                     </div>
                     <form action="" method="POST">
                         {%csrf_token%}
-                        <input type="text" required placeholder="Email" class="field" id="search"><br>
+                        <input type="text" required placeholder="username" name="username" class="field" id="search"><br>
                         <input type="password" required placeholder="Password" class="field"><br><a href="#" style="text-decoration: none; color: #666; font-size: min(0.7em,2vw); float: right; position: relative;top: -1.5em;">Forget Password?</a>
                         <button class="login-btn">Login</button>
                         <p style="font-size: min(1em,2.5vw);color: #999;">New User? <span><a href="#" style="color: #004C80;font-weight: 600;">SignUp</a></span> here!!</p>
