--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -4,7 +4,7 @@
 {% block body %}
     <!-- STYLESHEET FOR THE PAGE -->
     <link rel="stylesheet" type="text/css"
-        href="{% static 'css/login.css' %}" />
+        href="{% static 'css/signup.css' %}" />
 
     <div class="container">
         <div class="main-form">
@@ -16,10 +16,18 @@
                     </div>
                     <form action="" method="POST">
                         {%csrf_token%}
-                        <input type="text" required placeholder="Email" class="field" id="search"><br>
-                        <input type="password" required placeholder="Password" class="field"><br><a href="#" style="text-decoration: none; color: #666; font-size: min(0.7em,2vw); float: right; position: relative;top: -1.5em;">Forget Password?</a>
+                        <div class="form-elem">
+                        <input type="text" required class="field">
+                        <label>Email</label>
+                        </div>
+                        <div class="form-elem">
+                        <input type="password" required class="field">
+                        <label>Password</label>
+                        <img src="https://img.icons8.com/pastel-glyph/64/000000/lock.png" class="lock-icon">
+                        <br><a href="#" style="text-decoration: none; color: #666; font-size: min(0.7em,2vw); float: right; position: relative;top: -1.5em;">Forget Password?</a>
+                        </div>
                         <button class="login-btn">Login</button>
-                        <p style="font-size: min(1em,2.5vw);color: #999;">New User? <span><a href="#" style="color: #004C80;font-weight: 600;">SignUp</a></span> here!!</p>
+                        <p style="font-size: min(1em,2.5vw);color: #999;">New User? <span><a href="/signup" style="color: #004C80;font-weight: 600;">SignUp</a></span> here!!</p>
                     </form>
                 </div>
                 <div class="grid-items grid-img"><img src="{% static 'images/login_side.jpg' %}" style="width: 100%; height: 100%; border-bottom-right-radius: 2rem;"></div>
