--- a/static/css/login.css
+++ b/static/css/login.css
@@ -6,6 +6,7 @@ a{
 }
 body,html{
     margin: 0;
+    font-size: 16px;
     width: 100%;
     height: 100%;
     font-family: sans-serif;
@@ -20,10 +21,11 @@ body,html{
     align-items: center;
 }
 .main-form{
-    width: 60%;
+    width: 65%;
     background: #fff;
     border-top-left-radius: 2rem;
     border-bottom-right-radius: 2rem;
+    min-width: 250px;
 }
 .grid-container{
     width: 100%;
@@ -33,8 +35,8 @@ body,html{
 .login-form{
     width: 100%;
     display: flex;
-    padding-top: 2.5vw;
-    padding-bottom: 2.5vw;
+    padding-top: 1.5vw;
+    padding-bottom: 1.5vw;
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -42,16 +44,16 @@ body,html{
 .user-img{
     display: block;
     margin: auto;
-    width: min(5em,14vw);
+    width: 5rem;
     margin-top: 2em;
 }
 .field{
-    padding: 0.6em 0.6em 0.6em 0.6em;
-    margin-bottom: 1.5em;
+    padding: 0.2em;
+    margin-bottom: 1em;
     width: 90%;
     border: 0;
     border-bottom: 0.1em solid gray;
-    font-size: min(1em,3vw);
+    font-size: 1em;
     outline: none;
 }
 .login-btn{
@@ -71,11 +73,17 @@ body,html{
     color: #fff;
 }
 form{
-    min-width: 75%;
+    min-width: 90%;
     padding: 2vw;
     text-align: center;
 }
-@media only screen and (max-width: 850px) {
+@media only screen and (max-width: 980px) {
+    html{
+        font-size: 14px;
+    }
+    .main-form{
+        width: 50%;
+    }
     .grid-img {
       display: none;
     }
@@ -83,26 +91,33 @@ form{
         grid-template-columns: auto;
     }
     .field{
-        width: 80%;
+        width: 90%;
     }
     .login-btn{
         width: 80%;
+        position: relative;
+        left: 1rem;
     }
   }
+  @media only screen and (max-width: 620px) {
+      html{
+          font-size: 12px;
+      }
+  }
   .lock-icon{
-    width: min(2rem,4.5vw);
+    width: 2.2rem;
     float: right;
     margin: 0;
     position: relative;
-    top: min(-4vw,-3.5rem);
+    top: -3.4rem;
 }
 .form-elem label{
     float: left;
     position: relative;
+    padding-left: 1em;
     top: -2.8em;
-    font-size: 1em;
+    font-size: 1rem;
     color: #999;
-    left: 1em;
     transition: 0.2s all ease-in-out;
 }
 .form-elem input{
@@ -110,13 +125,13 @@ form{
 }
 .form-elem input:focus  +label{
   position: relative;
-  top: -5.8em;
-  font-size: 0.7em;
+  top: -5.2em;
+  font-size: 0.6em;
   color: #000;
 }
 .form-elem input:valid +label{
   position: relative;
   color: #000;
-  top: -5.8em;
-  font-size: 0.7em;
+  top: -5.2em;
+  font-size: 0.6em;
 }
