--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -4,7 +4,7 @@
 {% block body %}
     <!-- STYLESHEET FOR THE PAGE -->
     <link rel="stylesheet" type="text/css"
-        href="{% static 'css/signup.css' %}" />
+        href="{% static 'css/login.css' %}" />
 
     <div class="container">
         <div class="main-form">
@@ -12,7 +12,7 @@
                 <div class="grid-items login-form">
                     <div style="width: 100%; text-align: center;">
                         <img src="https://img.icons8.com/ios-filled/100/000000/user-male-circle.png" class="user-img">
-                        <h3 style="font-size: min(1.5rem,4vw); width: 100%;">Account Login</h3>
+                        <h3 style="font-size:1.5rem; width: 100%;">Account Login</h3>
                     </div>
                     <form action="" method="POST">
                         {%csrf_token%}
@@ -24,10 +24,10 @@
                         <input type="password" required class="field">
                         <label>Password</label>
                         <img src="https://img.icons8.com/pastel-glyph/64/000000/lock.png" class="lock-icon">
-                        <br><a href="#" style="text-decoration: none; color: #666; font-size: min(0.7em,2vw); float: right; position: relative;top: -1.5em;">Forget Password?</a>
+                        <br><a href="#" style="text-decoration: none; color: #666; font-size: 0.7rem; float: right; position: relative;top: -1em; left: 1.9em;">Forget Password?</a>
                         </div>
                         <button class="login-btn">Login</button>
-                        <p style="font-size: min(1em,2.5vw);color: #999;">New User? <span><a href="/signup" style="color: #004C80;font-weight: 600;">SignUp</a></span> here!!</p>
+                        <p style="font-size: 1rem;color: #999;">New User? <span><a href="/signup" style="color: #004C80;font-weight: 600;">SignUp</a></span> here!!</p>
                     </form>
                 </div>
                 <div class="grid-items grid-img"><img src="{% static 'images/login_side.jpg' %}" style="width: 100%; height: 100%; border-bottom-right-radius: 2rem;"></div>
