--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -5,7 +5,8 @@ a{
     text-decoration: none;
 }
 body,html{
-    padding-top: 2rem;
+    margin: 0;
+    font-size: 16px;
     width: 100%;
     height: 100%;
     font-family: sans-serif;
@@ -18,25 +19,24 @@ body,html{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 2rem;
 }
 .main-form{
-    width: 60%;
+    width: 65%;
     background: #fff;
     border-top-left-radius: 2rem;
-    margin-bottom: 2rem;
-    margin-top: 2rem;
     border-bottom-right-radius: 2rem;
+    min-width: 300px;
 }
 .grid-container{
     width: 100%;
     display: grid;
-    grid-template-columns: 40% 60%;}
+    grid-template-columns: 40% 60%;
+}
 .signup-form{
     width: 100%;
     display: flex;
-    padding-top: 1.5vw;
-    padding-bottom: 1vw;
+    padding-top: 1.5em;
+    padding-bottom: 1em;
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -44,23 +44,22 @@ body,html{
 .user-img{
     display: block;
     margin: auto;
-    width: min(5em,14vw);
+    width: 5rem;
     margin-top: 2em;
 }
 .field{
-    padding: 0.6em 0.6em 0.6em 0.6em;
-    margin-top: 0.4em;
+    padding: 0.2em;
+    margin-top: 1em;
     width: 90%;
     border: 0;
     border-bottom: 0.1em solid gray;
-    font-size: min(1em,3vw);
-    letter-spacing: 0.08rem;
+    font-size: 1rem;
     outline: none;
 }
 .signup-btn{
     padding: 0.6em 0.8em 0.6em 0.8em;
     width: 97%;
-    font-size: min(1em,3vw);
+    font-size: 1rem;
     border-radius: 2em;
     display: block;
     margin: auto;
@@ -74,11 +73,14 @@ body,html{
     color: #fff;
 }
 form{
-    min-width: 75%;
+    min-width: 90%;
     padding: 2vw;
     text-align: center;
 }
-@media only screen and (max-width: 850px) {
+@media only screen and (max-width: 980px) {
+    html{
+        font-size: 14px;
+    }
     .grid-img {
       display: none;
     }
@@ -86,29 +88,37 @@ form{
         grid-template-columns: auto;
     }
     .field{
-        width: 80%;
+        width: 90%;
     }
     .main-form{
-        width: 80%;
+        width: 50%;
     }
     .signup-btn{
         width: 80%;
+        position: relative;
+        left: 1rem;
     }
   }
+  @media only screen and (max-width: 620px) {
+    html{
+        font-size: 12px;
+    }
+}
   .lock-icon{
-      width: 2rem;
+      width: 2.2rem;
       float: right;
       margin: 0;
       position: relative;
-      top: -2.2rem;
+      top: -2.6rem;
+      right: 0.8em;
   }
   .form-elem label{
       float: left;
       position: relative;
-      top: -1.8em;
-      font-size: 1.1em;
+      top: -1.4em;
+      padding-left: 1.3em;
+      font-size: 1rem;
       color: #999;
-      left: 1.2em;
       transition: 0.2s all ease-in-out;
   }
   .form-elem input{
@@ -116,13 +126,13 @@ form{
 }
 .form-elem input:focus  +label{
     position: relative;
-    top: -3.6em;
+    top: -3em;
     font-size: 0.8em;
     color: #000;
 }
 .form-elem input:valid +label{
     position: relative;
     color: #000;
-    top: -3.6em;
+    top: -3em;
     font-size: 0.8em;
 }
