--- a/templates/user/signup.html
+++ b/templates/user/signup.html
@@ -12,7 +12,7 @@
             <div class="grid-items signup-form">
                 <div style="width: 100%; text-align: center;">
                     <img src="https://img.icons8.com/ios-filled/100/000000/user-male-circle.png" class="user-img">
-                    <h3 style="font-size: min(1.5rem,4vw); width: 100%;">New User Sign Up</h3>
+                    <h3 style="font-size: 1.5rem; width: 100%;">New User Sign Up</h3>
                 </div>
                 <form action="" method="POST">
                     {%csrf_token%}
@@ -62,7 +62,7 @@
                     <button class="signup-btn">SignUp</button>
                 </form>
             </div>
-            <div class="grid-items grid-img"><img src="{% static 'images/signup_side.jpg' %}" style="width: 100%; height: 100%; border-bottom-right-radius: 2rem;"></div>
+            <div class="grid-items grid-img"><img src="{% static 'images/signup_side.jpg' %}" style="width: 100%; height: 100%; border-bottom-right-radius: 2em;"></div>
         </div>
     </div>
 </div>
