--- a/templates/user/index.html
+++ b/templates/user/index.html
@@ -1,4 +1,7 @@
 {% extends 'base/base.html' %}
 {% block body %}
-<h1>this is the landing page</h1>
+<h1>welcome {{request.user}}</h1>
+<a href="{%url 'user:logout' %}" style="display: block;">logout</a>
+<a href="{%url 'qr:generateqr' %}">generate qr</a>
+
 {% endblock %}
