--- a/templates/user/signup.html
+++ b/templates/user/signup.html
@@ -2,9 +2,8 @@
 {% load static %}
 
 {% block body %}
-    <!-- STYLESHEET FOR THE PAGE -->
-    <link rel="stylesheet" type="text/css"
-    href="{% static 'css/signup.css' %}" />
+<!-- STYLESHEET FOR THE PAGE -->
+<link rel="stylesheet" type="text/css" href="{% static 'css/signup.css' %}" />
 
 <div class="container">
     <div class="main-form">
@@ -14,55 +13,67 @@
                     <img src="https://img.icons8.com/ios-filled/100/000000/user-male-circle.png" class="user-img">
                     <h3 style="font-size: 1.5rem; width: 100%;">New User Sign Up</h3>
                 </div>
-                <form action="" method="POST">
+
+                <form action="" method="POST" enctype="multipart/form-data">
                     {%csrf_token%}
+                    {{user_basic_form.errors}}
+                    {{user_additional_form.errors}}
+
                     <div class="form-elem">
-                    <input type="text" required class="field">
-                    <label >Name</label>
+                        {{user_basic_form.username}}
+                        <label>username</label>
                     </div>
+
                     <div class="form-elem">
-                    <input type="text" required class="field">
-                    <label >Reg. No.</label>
+                        {{user_basic_form.first_name}}
+                        <label>first name</label>
                     </div>
+
                     <div class="form-elem">
-                    <input type="email" required class="field">
-                    <label >Email</label>
+                        {{user_basic_form.last_name}}
+                        <label>last name</label>
                     </div>
-                    <select class="field" style="margin-bottom: 1.5em;" required>
-                        <option value="" style="color: #999;">Hostel Name</option>
-                        <option value="svbh">SVBH</option>
-                        <option value="malviya">Malviya Hostel</option>
-                        <option value="tagore">Tagore Hostel</option>
-                        <option value="tandon">Tandon Hostel</option>
-                        <option value="tilak">Tilak Hostel</option>
-                        <option value="kngh">KNGH</option>
-                    </select>
-                    <select class="field" style="margin-bottom: 1.5em;" required>
-                        <option value="" style="color: #999;">Branch</option>
-                        <option value="cs">Computer Science</option>
-                        <option value="it">Information & Tech</option>
-                        <option value="ece">Electronics & Comm.</option>
-                        <option value="ee">Electrical</option>
-                        <option value="mech">Mechanical</option>
-                        <option value="ce">Chemical</option>
-                        <option value="civil">Civil</option>
-                        <option value="pi">Production & Ind.</option>
-                        <option value="bt">Biotechnology</option>
-                    </select>
+
+                    {{user_additional_form.profile_pic}}
+
                     <div class="form-elem">
-                   <input type="password" required class="field">
-                   <label>Password</label>
-                   <img src="https://img.icons8.com/pastel-glyph/64/000000/lock.png" class="lock-icon">
+                        {{user_additional_form.regno}}
+                        <label>Reg. No.</label>
                     </div>
+
                     <div class="form-elem">
-                   <input type="password" required class="field">
-                   <label>Confirm Password</label>
-                   <img src="https://img.icons8.com/pastel-glyph/64/000000/lock.png" class="lock-icon" >
-                   </div>
-                    <button class="signup-btn">SignUp</button>
+                        {{user_additional_form.roomno}}
+                        <label>Room No.</label>
+                    </div>
+
+                    <div class="form-elem">
+                        {{user_basic_form.email}}
+                        <label>Email</label>
+                    </div>
+
+                    {{user_additional_form.group}}
+
+                    {{user_additional_form.hostel}}
+
+                    {{user_additional_form.branch}}
+
+                    <div class="form-elem">
+                        {{user_basic_form.password}}
+                        <label>Password</label>
+                        <img src="https://img.icons8.com/pastel-glyph/64/000000/lock.png" class="lock-icon">
+                    </div>
+
+                    <!-- <div class="form-elem">
+                        <input type="password" required class="field">
+                        <label>Confirm Password</label>
+                        <img src="https://img.icons8.com/pastel-glyph/64/000000/lock.png" class="lock-icon">
+                    </div> -->
+                    <button type="submit" class="signup-btn">SignUp</button>
+                    <a href="/login/" class="signup-btn">login</a>
                 </form>
             </div>
-            <div class="grid-items grid-img"><img src="{% static 'images/signup_side.jpg' %}" style="width: 100%; height: 100%; border-bottom-right-radius: 2em;"></div>
+            <div class="grid-items grid-img"><img src="{% static 'images/signup_side.jpg' %}"
+                    style="width: 100%; height: 100%; border-bottom-right-radius: 2em;"></div>
         </div>
     </div>
 </div>
