--- a/templates/base/nav.html
+++ b/templates/base/nav.html
@@ -8,7 +8,7 @@
             <a href="#">Home</a>
         </li>
         <li class="tab">
-            <a href="#">Checkout</a>
+            <a href="{%url 'qr:generateqr' %}">Checkout</a>
         </li>
         <li class="tab">
             <a href="#">Community</a>
@@ -17,5 +17,28 @@
             <a href="#">Contact</a>
         </li>
     </ul>
-    <img src="{% static 'images/profile_pic/WIN_20191002_20_23_08_Pro_226X4hY.jpg/' %}" alt="user icon">
+    <div id="profile_pic" onmouseover="show()" onmouseout="hide()">
+        <img src="{% static 'images/profile_pic/WIN_20191002_20_23_08_Pro_226X4hY.jpg/' %}" alt="user icon">
+        <div id="sidebar">
+            <div class="side">
+                <a href="">Edit</a>
+                </div>
+            <div class="side">
+                <a href="{%url 'user:logout' %}" style="display: block;">logout</a>
+            </div>
+        </div>
+    </div>
+
 </nav>
+
+
+
+<script>
+    function show(){
+       document.getElementById("sidebar").style.display = "block";
+    }
+
+    function hide(){
+       document.getElementById("sidebar").style.display = "none";
+    }
+</script>
