--- a/templates/user/index.html
+++ b/templates/user/index.html
@@ -25,8 +25,5 @@
         </div>
         
     </div>
-<h1>welcome {{request.user}}</h1>
-<a href="{%url 'user:logout' %}" style="display: block;">logout</a>
-<a href="{%url 'qr:generateqr' %}">generate qr</a>
-
+<!-- <h1 onmouseover="bigImg(this)">welcome {{request.user}}</h1> -->
 {% endblock %}
