--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -26,13 +26,13 @@
                     {%csrf_token%}
                     <div class="form-elem">
                         <input type="text" required name="username" class="field">
-                        <label>username</label>
+                        <label>Username</label>
                     </div>
                     <div class="form-elem">
                         <input type="password" required name="password" class="field">
                         <label>Password</label>
                         <img src="https://img.icons8.com/pastel-glyph/64/000000/lock.png" class="lock-icon">
-                        <br><a href="#"
+                        <a href="#"
                             style="text-decoration: none; color: #666; font-size: 0.7rem; float: right; position: relative;top: -1em; left: 1.9em;">Forget
                             Password?</a>
                     </div>
