--- a/templates/user/signup.html
+++ b/templates/user/signup.html
@@ -21,17 +21,17 @@
 
                     <div class="form-elem">
                         {{user_basic_form.username}}
-                        <label>username</label>
+                        <label>Username</label>
                     </div>
 
                     <div class="form-elem">
                         {{user_basic_form.first_name}}
-                        <label>first name</label>
+                        <label>Firstname</label>
                     </div>
 
                     <div class="form-elem">
                         {{user_basic_form.last_name}}
-                        <label>last name</label>
+                        <label>Lastname</label>
                     </div>
 
                     {{user_additional_form.profile_pic}}
@@ -69,7 +69,6 @@
                         <img src="https://img.icons8.com/pastel-glyph/64/000000/lock.png" class="lock-icon">
                     </div> -->
                     <button type="submit" class="signup-btn">SignUp</button>
-                    <a href="/login/" class="signup-btn">login</a>
                 </form>
             </div>
             <div class="grid-items grid-img"><img src="{% static 'images/signup_side.jpg' %}"
