--- a/QR_scanner/src/main/res/layout/activity_list_students.xml
+++ b/QR_scanner/src/main/res/layout/activity_list_students.xml
@@ -7,6 +7,14 @@
     android:background="#1EDF9B"
     tools:context=".List_students">
 
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/list_main"
+        android:layout_above="@id/bottom_nav_list"
+        android:backgroundTint="@color/colorPrimary"
+        />
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
         android:layout_height="50sp"
