--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -1,49 +1,34 @@
-nav {
-    font-size: 20px;
+.nav-container{
     display: grid;
-    grid-template-columns: 1fr 1fr 60px;
-    width: 100%;
-    position: fixed;
-    top: 0px;
-    justify-content: center;
-    align-items: center;
-    height: 75px;
-    background-color: #278AB0;
-}
-
-#logo{
-    color: white;
-}
-nav .tab-container{
+    width: 96%;
+    margin: auto;
+    grid-template-columns:  3rem auto;
     background-color: transparent;
-    list-style-type: none;
-    width: 500px;
-    padding: 0;
-    margin: 0;
-    justify-self: end;
+    align-items: center;
+    border-bottom: solid 0.1rem gray;
+}
+.nav-tab-container{
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    justify-self: right;
+    grid-gap: 0.8rem;
+    font-size: 1rem;
+    font-weight: 600;
+    color: gray;
+    justify-items: center;
+    align-items: center;
+}
+.nav-tab{
+    background-color: transparent;
+}
+#logo img{
     display: block;
+    width: 3.2rem;
+    height: 3.2rem;
+    margin: 0.3em 1em;
 }
-
-nav  .tab{
-    display: inline;
-}
-
-nav .tab a{
-    text-decoration: none;
-    color: white;
-    padding: 14px 16px;
-    text-align: center;
-    /* background-color: turquoise; */
-}
-
-nav img[alt = "user icon"] {
-    width: 60px;
-    height: 60px;
-    display: block;
-    justify-self: end;
-    border-radius: 50%;
-}
-
-nav .tab a:hover{
-    border-bottom: 3px solid white;
+.user{
+    width: 2.8rem;
+    height: 2.8rem;
+    margin: 0.3em 1em;
 }
