community section completed all working fine

--- a/templates/communities/community/community_detail.html
+++ b/templates/communities/community/community_detail.html
@@ -9,17 +9,28 @@
 
 <body>
     <div style="border: 2px solid magenta;">
+        <img src="/{{community.community_img.url}}" alt="community logo" style="width: 100px; height: auto;">
         <h1>{{community.name}} - {{community.admin}}</h1>
         <pre>{{community.desc}}</pre>
         <p>members: {{community.followed_by.count}}</p>
-        <a href="{% url 'community:join' community.slug %}">join</a>
+        <!-- no controls are given for notice community -->
+        {% if community.name != 'notice'%}
+        {% if request.user in community.followed_by.all%}
         <a href="{% url 'community:leave' community.slug %}">leave</a>
+        {% else %}
+        <a href="{% url 'community:join' community.slug %}">join</a>
+        {%endif%}
+        {%endif%}
+
+
+
     </div>
     {% if request.user == community.admin%}
     <a href="{% url 'community:update' community.slug %}">edit community details</a>
     <a href="{% url 'community:delete' community.slug %}">delete community</a>
     <a href="{% url 'community:create-post' community.slug %}">create new post</a>
     {% endif %}
+    <a href="{% url 'community:members' community.slug %}">see members</a>
     {% if posts.count %}
     {% for post in posts %}
     <div style="margin: 2em auto; border: 2px solid tomato;max-width: 650px;">
