--- a/templates/communities/community/community_create_form.html
+++ b/templates/communities/community/community_create_form.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
 <body>
-    <form action="" method="post">
+    {% load crispy_forms_tags %}
+    <form action="" method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        {{form.as_p}}
-        <button>create new community</button>
+        {{form|crispy}}
+        <button type="submit" class="btn btn-primary">create new communitys</button>
     </form>
 </body>
 
